from enum import IntEnum


class LiveChannelStatus(IntEnum):
    NONE = 0
    PROCESSING = 1
    FAILED = 2
